--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <div class="plan-info-container">
                         <h3 class="plan-card--title">Un único pago</h3>
                         <p class="plan-card--price"><span>$</span>299</p>
-                        <p class="plan-card--saving">*Preocupate por un solo pago, una sola vez.</p>
+                        <p class="plan-card--saving">*Preocupate por un solo pago, para siempre.</p>
                         <button class="plan-card--cta">Escoger este <span></span></button>
                     </div>
                 </article>
